--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=nequi
+
+#Database configuration
+#spring.datasource.url=jdbc:mysql://nequi.cdek48y6qrqc.us-east-2.rds.amazonaws.com:3306/nequi_db
+spring.datasource.url=jdbc:mysql://${RDS_ENDPOINT}:${PORT}/${DB_NAME}
+#spring.datasource.username=admin
+spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=julemole
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
